# machine-learning-project

./: .env.example  .gitignore  .python-version  README.md  app.py  enunciado-pontIA.md  main.py  pyproject.toml  que_usar.md  requirements.txt  troubleshooting.md
.github/workflows/: ci.yml
api/: config.py  exceptions.py  main.py  router.py  schemas.py
api/config/: __init__.py  config.py
api/endpoints/: predict.py
api/endpoints/v1/: __init__.py  health.py  predict.py
api/exceptions/: __init__.py  custom_exceptions.py
api/schemas/: booking.py
api/services/: predictor.py
data/processed/: .gitkeep
notebooks/: eda_exploration.ipynb  evaluation.ipynb  model_training.ipynb  prediction.ipynb
outputs/: comparativa_modelos.csv
src/: config.py  data_loader.py  evaluator.py  model_trainer.py  predictor.py  theory.md
tests/: test_api.py  test_pipeline.py
