[project]
name = "hotel-booking-ml"
version = "0.1.0"
description = "Hotel booking cancellation predictor (binary classification)"
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    # Data
    "pandas>=2.2",
    "numpy>=1.26",

    # ML
    "scikit-learn>=1.4",
    "xgboost>=2.0",

    # Deep Learning
    "tensorflow>=2.16",

    # Serialization & tracking
    "joblib>=1.3",
    "mlflow>=2.13",

    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "python-multipart>=0.0.9",

    # Config
    "python-dotenv>=1.0",

    # Visualization
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",
]

[project.optional-dependencies]
streamlit = ["streamlit>=1.35"]
notebook  = ["jupyter>=1.0", "ipykernel>=6.29"]
dev       = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",   # async test client for FastAPI
    "ruff>=0.4",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "api"]

# --- Ruff (linter + formatter) ---
[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]  # pycodestyle + pyflakes + isort
extend-per-file-ignores = { "*.ipynb" = ["E501"] }

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
